deploy: 3e625387a707385fe4adc4c75478e3c34c5b53cf

--- a/resume/index.html
+++ b/resume/index.html
@@ -194,7 +194,7 @@ With good learning ability and self-drive, I pay attention to code norms and mai
 <h2 id="自我评价" style="position:relative;"><a href="#%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7" aria-label="自我评价 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>自我评价</h2>
 <!-- &emsp;&emsp; -->
 <div class="indent-8">
-具备良好的学习能力和自我驱动力，注重代码规范和可维护性。具备较为扎实的前端编程基础。同时，我具备良好的团队协作和抗压能力，注重学习和成长，能够快速适应新环境和新技术。
+具备良好的学习能力和自我驱动力，注重代码规范和可维护性。具备较为扎实的前端编程基础。同时,具备良好的团队协作和抗压能力，能够快速适应新环境和新技术。
 </div>
 </div>
 <!-- todo -->
