--- a/resume/index.html
+++ b/resume/index.html
@@ -144,10 +144,14 @@ With good learning ability and self-drive, I pay attention to code norms and mai
 <li>年龄： 23</li>
 <li>毕业院校： 信阳师范学院</li>
 <li>专业：软件工程</li>
-<li>邮箱： <a href="mailto:jyao4783@gmail.com">jyao4783@gmail.com</a></li>
-<li>联系电话： 13717953724</li>
 <li>期望薪资： 8k-10k</li>
+</ul>
+<h3 id="联系方式" style="position:relative;"><a href="#%E8%81%94%E7%B3%BB%E6%96%B9%E5%BC%8F" aria-label="联系方式 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>联系方式</h3>
+<ul>
+<li>电话： 13717953724</li>
+<li>邮箱： <a href="mailto:jyao4783@gmail.com">jyao4783@gmail.com</a></li>
 <li>Github: <a href="https://github.com/oeyoews">https://github.com/oeyoews</a></li>
+<li>简历： <a href="https://blog.oeyoewl.top/resume">https://blog.oeyoewl.top/resume</a></li>
 </ul>
 </div>
 <h2 id="教育经历" style="position:relative;"><a href="#%E6%95%99%E8%82%B2%E7%BB%8F%E5%8E%86" aria-label="教育经历 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>教育经历</h2>
