deploy: 28107a1e3c012c8aa1d2b26b386655cbee1701b2

--- a/resume/index.html
+++ b/resume/index.html
@@ -155,15 +155,14 @@ With good learning ability and self-drive, I pay attention to code norms and mai
 <li>简历： <a href="https://blog.oeyoewl.top/resume">https://blog.oeyoewl.top/resume</a></li>
 </ul>
 <h2 id="教育经历" style="position:relative;"><a href="#%E6%95%99%E8%82%B2%E7%BB%8F%E5%8E%86" aria-label="教育经历 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>教育经历</h2>
+<h3 id="信阳师范学院-本科-软件工程-2019-2023" style="position:relative;"><a href="#%E4%BF%A1%E9%98%B3%E5%B8%88%E8%8C%83%E5%AD%A6%E9%99%A2-%E6%9C%AC%E7%A7%91-%E8%BD%AF%E4%BB%B6%E5%B7%A5%E7%A8%8B-2019-2023" aria-label="信阳师范学院 本科 软件工程 2019 2023 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>信阳师范学院 本科 软件工程 2019-2023</h3>
 <h3 id="主修课程" style="position:relative;"><a href="#%E4%B8%BB%E4%BF%AE%E8%AF%BE%E7%A8%8B" aria-label="主修课程 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>主修课程</h3>
 <div class="md:columns-2 columns-1">
 <ul>
 <li>数据结构与算法</li>
 <li>计算机组成原理</li>
-<li>操作系统</li>
 <li>计算机网络</li>
 <li>数据库系统原理</li>
-<li>编译原理</li>
 <li>Web 开发技术</li>
 <li>移动应用开发</li>
 </ul>
@@ -179,22 +178,25 @@ With good learning ability and self-drive, I pay attention to code norms and mai
 <li>熟悉 Mysql(Mariadb), Mongodb 等数据库， 及 Navicat, Dbeaver，Workbench 等数据库工具的使用</li>
 <li>掌握 Lua, Java, Python</li>
 <li>具备良好的代码书写风格和快速查阅英文技术文档能力</li>
-<li>具备较强的学习，沟通，抗压能力, 具备盲打能力
-<!-- - 数据结构 -->
-<!-- jwt -->
+<li>具备较强的学习，沟通，抗压能力, 具备盲打能力</li>
+</ul>
+<h2 id="项目经历" style="position:relative;"><a href="#%E9%A1%B9%E7%9B%AE%E7%BB%8F%E5%8E%86" aria-label="项目经历 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>项目经历</h2>
+<ul>
+<li>
+<p>参与过一个天气应用的开发项目。该应用需要向用户提供当天和未来几天的天气预报信息，并且需要支持多种城市和语言的查询。在这个项目中，我主要负责以下几个方面的工作：
+UI 设计和实现。根据产品需求，我使用 Android Studio 中的布局编辑器和 XML 代码实现了应用的各个界面，包括主页、城市选择界面、天气详情界面等。我还使用了 Material Design 的设计语言，为应用添加了一些动画和交互效果，提高了用户体验。</p>
+</li>
+<li>
+<p>校园信息交流平台后端服务器的搭建和开发。我使用了 Node.js 和 Express 框架，搭建了一个 RESTful API 服务器，用于处理用户的登录、注册、发布消息、获取消息等请求。我还使用了 MongoDB 数据库，存储用户信息和消息数据，并使用 Mongoose 库进行数据模型的定义和查询操作。 用户界面的设计和实现。我负责了应用的用户界面的设计和实现。我使用了原生组件和第三方组件库，实现了应用的各个界面，包括登录界面、注册界面、主页、消息详情页、个人资料页等。我还使用了 Flexbox 布局和样式表，调整了应用的布局和样式，使其看起来更加美观和舒适。</p>
 </li>
 </ul>
-<!-- ## 项目经历 -->
-<!-- TODO -->
-<!-- ## 实习经历 -->
-<!-- ### Java -->
-<!-- ## 个人爱好
-
+<!--
+## 个人爱好
 - 喜欢 Linux 操作系统和 Vim(Neovim) 编辑器
 - 热爱开源软件和版本控制工具 Git
 - 喜欢使用 Rss 阅读技术文章和使用 Markdown、TiddlyWiki 记笔记
-- 热爱运动和知识管理 -->
-<!-- 在线博客 -->
+- 热爱运动和知识管理
+-->
 <h2 id="自我评价" style="position:relative;"><a href="#%E8%87%AA%E6%88%91%E8%AF%84%E4%BB%B7" aria-label="自我评价 permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>自我评价</h2>
 <!-- &emsp;&emsp; -->
 <div class="indent-8">
