--- a/blog-about/index.html
+++ b/blog-about/index.html
@@ -54,6 +54,26 @@
 <li><strong>KISS Prinicple</strong></li>
 <li>Blog Framework code is self controlled and understand for myself</li>
 <li>Use neovim editor wirite markdown(mdx) technology articles based markdown(mdx), and use git to update online website(SSG)</li>
+</ul>
+<h2 id="some-methods-to-build-personal-online-blogs" style="position:relative;"><a href="#some-methods-to-build-personal-online-blogs" aria-label="some methods to build personal online blogs permalink" class="anchor before"><svg aria-hidden="true" focusable="false" height="16" version="1.1" viewBox="0 0 16 16" width="16"><path fill-rule="evenodd" d="M4 9h1v1H4c-1.5 0-3-1.69-3-3.5S2.55 3 4 3h4c1.45 0 3 1.69 3 3.5 0 1.41-.91 2.72-2 3.25V8.59c.58-.45 1-1.27 1-2.09C10 5.22 8.98 4 8 4H4c-.98 0-2 1.22-2 2.5S3 9 4 9zm9-3h-1v1h1c1 0 2 1.22 2 2.5S13.98 12 13 12H9c-.98 0-2-1.22-2-2.5 0-.83.42-1.64 1-2.09V6.25c-1.09.53-2 1.84-2 3.25C6 11.31 7.55 13 9 13h4c1.45 0 3-1.69 3-3.5S14.5 6 13 6z"></path></svg></a>Some methods to build personal online blogs</h2>
+<ul>
+<li>Github</li>
+<li>Gitlab</li>
+<li>Netlify</li>
+<li>Hexo</li>
+<li>Hugo</li>
+<li>Vercel</li>
+<li>Nextjs</li>
+<li>Vitepress</li>
+<li>vurpress</li>
+<li>Astro</li>
+<li>CloudFlare</li>
+<li>Nuxt</li>
+<li>Tiddlywiki</li>
+<li>Jekyll</li>
+<li>Docsify</li>
+<li>Docus</li>
+<li>Docusaurus</li>
 </ul></section></article></main></div><div id="page-progress"><div id="page-progress-bar"></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/blog-about/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
