--- a/blog-about/index.html
+++ b/blog-about/index.html
@@ -74,6 +74,7 @@
 <li>Docsify</li>
 <li>Docus</li>
 <li>Docusaurus</li>
+<li>Gastby</li>
 </ul></section></article></main></div><div id="page-progress"><div id="page-progress-bar"></div></div></div><div id="gatsby-announcer" style="position:absolute;top:0;width:1px;height:1px;padding:0;overflow:hidden;clip:rect(0, 0, 0, 0);white-space:nowrap;border:0" aria-live="assertive" aria-atomic="true"></div></div><script id="gatsby-script-loader">/*<![CDATA[*/window.pagePath="/blog-about/";/*]]>*/</script><!-- slice-start id="_gatsby-scripts-1" -->
           <script
             id="gatsby-chunk-mapping"
